Trying to fix graduation card from overflowing its content container on mobile

--- a/src/routes/Home2/components/Qualifications/components/GraduationCard/GraduationCard.module.css
+++ b/src/routes/Home2/components/Qualifications/components/GraduationCard/GraduationCard.module.css
@@ -14,6 +14,12 @@
     /* perspective: 1400px; */
 }
 
+@media only screen and (max-width: 899px) {
+    .scene {
+        width: min(100%, calc(48svh * 5 / 7));
+    }
+}
+
 .card {
     position: relative;
     width: 100%;
